TEST_PROGRAMS/INVALID/11/test5.go
package main;

var (
	test int = 5
	jeremy string = true
	var (
		life int = "test";
		)
	)
//Type checking and declaration error
